2009-04-17  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in: Add application/x-xz and
	application/x-xz-compressed-tar mimetypes. References for them is at:
	http://tukaani.org/xz/ (http://tukaani.org/xz/xz-file-format.txt).
	Based on a Mandriva patch.
	* tests/good-1-delta-lzma2.tiff.xz: Test data for application/x-xz;
	taken from the XZ test cases in the sources.
	* tests/spinboxes-0.1.1-Linux.tar.xz: Test data for
	application/x-xz-compressed-tar, provided by Helio Chissini de Castro.
	* tests/list: Add test cases to the list.

2009-04-10  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add application/vnd.google-earth.kml+xml
	and application/vnd.google-earth.kmz mimetypes. (Closes: KDE bug #136983)
	* tests/list:
	* tests/googleearth.kml: Test data (from marble, actually).

2009-04-10  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add Makefile.* pattern for text/x-makefile,
	to catch Makefile.gnu and other similar names, with low weight to let
	Makefile.html files be text/html.
	* tests/list:
	* tests/Makefile:
	* tests/Makefile.gnu: Test data

2009-04-09  Alexander Larsson  <alexl@redhat.com>

	* update-mime-database.c: (process_freedesktop_node),
	(compare_glob_by_weight), (cmp_magic), (magic_new), (main):
	Support glob-deleteall and magic-deleteall nodes.
	Copy glob and glob-deleteall nodes to the per-mimetype xml file.

2009-04-08  David Faure  <faure@kde.org>

	* shared-mime-info-spec.xml: Add definition of glob-deleteall
	and magic-deleteall, and their effect on globs2 and magic files,
	as discussed on the xdg list.

2009-03-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Don't use "make" but "$(MAKE)" to call
	our make, fixes build on *BSDs, spotted by Antoine Jacoutot
	<ajacoutot@lphp.org> (Closes: #20655)

2009-02-24  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/small_wav.mxf: Patch from Sebastian Dröge
	<slomo@circular-chaos.org> to add the MXF video mime-type