@@ -7,7 +7,7 @@ tests/video-dvd-2 x-content/video-dvd x-content/audio-dvd
 tests/video-bluray x-content/video-bluray
 tests/video-hddvd x-content/video-hddvd
 tests/image-picturecd x-content/image-picturecd
-tests/software x-content/software
+tests/software x-content/unix-software
 
 # Supposed to fail
 x tests x-content/image-dcf
